--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -69,4 +69,14 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">16dp</item>
     </style>
+
+    <style name="SmallCircleCorners">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">32dp</item>
+    </style>
+
+    <style name="CircleCorners">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">58dp</item>
+    </style>
 </resources>
