--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
 
         <android.widget.Button
             android:id="@+id/btnSettings"
+            android:visibility="gone"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_marginEnd="30dp"
@@ -40,13 +41,24 @@
             android:fontFamily="@font/comfortaa"
             android:textColor="@color/textColor" />
 
+        <android.widget.Button
+            android:id="@+id/btnFilters"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginTop="28dp"
+            android:layout_gravity="end"
+            android:background="@drawable/ic_filters"
+            android:fontFamily="@font/comfortaa"
+            android:textColor="@color/textColor" />
+
         <TextView
             android:id="@+id/tvWinTitle"
             style="@style/SemiBoldText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="26dp"
-            android:text="@string/your_profile"
+            android:text="@string/advertisements"
             android:textAlignment="center"
             android:textSize="23sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -76,6 +88,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profileLayout" />
+
+    <FrameLayout
+        android:id="@+id/loadingLayout"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginVertical="80dp"/>
+
 
     <!--тень для боттом меню бара-->
 
