--- a/app/src/main/res/layout/fragment_profile_desc_horizontal.xml
+++ b/app/src/main/res/layout/fragment_profile_desc_horizontal.xml
@@ -23,10 +23,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/ivPFP_64"
                 android:layout_width="65dp"
                 android:layout_height="65dp"
-                android:src="@drawable/ic_pfp" />
+                android:src="@drawable/ic_user_pfp"
+                app:shapeAppearanceOverlay="@style/SmallCircleCorners"/>
 
             <android.widget.Button
                 android:id="@+id/btnEdit"
@@ -57,7 +59,7 @@
             <!--date descs-->
 
             <TextView
-                android:id="@+id/tvRegDate"
+                android:id="@+id/tvEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
