--- a/app/src/main/res/layout/fragment_favourite_advertisements.xml
+++ b/app/src/main/res/layout/fragment_favourite_advertisements.xml
@@ -11,7 +11,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginHorizontal="22dp"
-        tools:listitem="@layout/ad_item"/>
+        tools:listitem="@layout/ad_item"
+        android:layout_gravity="center_horizontal"
+        android:visibility="gone"/>
 
     <FrameLayout
         android:id="@+id/noFavAds"
