--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,7 +100,7 @@
     <!--тень для боттом меню бара-->
 
     <FrameLayout
-        android:id="@+id/frameLayout4"
+        android:id="@+id/flBottomShadow"
         android:layout_width="match_parent"
         android:layout_height="105dp"
         android:background="@drawable/shape_dropshadow"
@@ -113,7 +113,7 @@
     <!--боттом меню бар-->
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/ivAdvertisements"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginBottom="15dp"
@@ -135,6 +135,48 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:menu="@menu/bottom_nav_menu" />
+
+
+    <!--кнопки внизу для объявления-->
+
+    <LinearLayout
+        android:id="@+id/llActionBtns"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingVertical="10dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <android.widget.Button
+            android:id="@+id/btnBuyNow"
+            style="@style/ButtonLightText"
+            android:textSize="14sp"
+            android:layout_width="181dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/shape_button_body"
+            android:backgroundTint="#289E5D"
+            android:text="Купить сейчас"/>
+
+        <android.widget.Button
+            android:id="@+id/btnChatSeller"
+            style="@style/ButtonDarkText"
+            android:textSize="14sp"
+            android:layout_width="181dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="7dp"
+            android:background="@drawable/shape_button_body"
+            android:backgroundTint="#DCDCDC"
+            android:text="Написать продавцу" />
+
+    </LinearLayout>
+
 
 
 
