--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -67,7 +67,7 @@
         app:boxStrokeErrorColor="@color/errorColor"
         app:errorEnabled="true"
         app:helperTextTextColor="@color/errorColor"
-        app:placeholderTextAppearance="@font/comfortaa"
+        app:placeholderTextAppearance="@style/PlaceholderTextStyle"
         app:placeholderTextColor="@color/textInputColor">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -107,7 +107,7 @@
         app:boxStrokeErrorColor="@color/errorColor"
         app:errorEnabled="true"
         app:helperTextTextColor="@color/errorColor"
-        app:placeholderTextAppearance="@font/comfortaa"
+        app:placeholderTextAppearance="@style/PlaceholderTextStyle"
         app:placeholderTextColor="@color/textInputColor"
 
         app:endIconMode="password_toggle"
@@ -152,7 +152,7 @@
         app:boxStrokeErrorColor="@color/errorColor"
         app:helperTextTextColor="@color/errorColor"
         app:errorEnabled="true"
-        app:placeholderTextAppearance="@font/comfortaa"
+        app:placeholderTextAppearance="@style/PlaceholderTextStyle"
         app:placeholderTextColor="@color/textInputColor"
 
         app:endIconMode="password_toggle"
