--- a/app/src/main/res/layout/activity_registration2.xml
+++ b/app/src/main/res/layout/activity_registration2.xml
@@ -66,7 +66,7 @@
         app:boxStrokeErrorColor="@color/errorColor"
         app:errorEnabled="true"
         app:helperTextTextColor="@color/errorColor"
-        app:placeholderTextAppearance="@font/comfortaa"
+        app:placeholderTextAppearance="@style/PlaceholderTextStyle"
         app:placeholderTextColor="@color/textInputColor">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -105,7 +105,7 @@
         app:boxStrokeErrorColor="@color/errorColor"
         app:errorEnabled="true"
         app:helperTextTextColor="@color/errorColor"
-        app:placeholderTextAppearance="@font/comfortaa"
+        app:placeholderTextAppearance="@style/PlaceholderTextStyle"
         app:placeholderTextColor="@color/textInputColor">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -144,7 +144,7 @@
         app:boxStrokeErrorColor="@color/errorColor"
         app:helperTextTextColor="@color/errorColor"
         app:errorEnabled="true"
-        app:placeholderTextAppearance="@font/comfortaa"
+        app:placeholderTextAppearance="@style/PlaceholderTextStyle"
         app:placeholderTextColor="@color/textInputColor">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -183,7 +183,7 @@
         app:boxStrokeErrorColor="@color/errorColor"
         app:helperTextTextColor="@color/errorColor"
         app:errorEnabled="true"
-        app:placeholderTextAppearance="@font/comfortaa"
+        app:placeholderTextAppearance="@style/PlaceholderTextStyle"
         app:placeholderTextColor="@color/textInputColor">
 
         <com.google.android.material.textfield.TextInputEditText
