--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -56,6 +56,17 @@
         <item name="expandedHintEnabled">false</item>
     </style>
 
+    <style name="ChatInputBox" parent="TextAppearance.AppCompat">
+        <item name="boxBackgroundMode">none</item>
+        <item name="expandedHintEnabled">false</item>
+    </style>
+
+    <style name="PlaceholderTextStyle" parent="TextAppearance.MaterialComponents.Caption">
+        <item name="fontFamily">@font/comfortaa</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#525252</item>
+    </style>
+
     <style name="ButtonBackReversed" parent="TextAppearance.AppCompat">
         <item name="android:layout_width">11dp</item>
         <item name="android:layout_height">21dp</item>
@@ -70,13 +81,18 @@
         <item name="cornerSize">16dp</item>
     </style>
 
+    <style name="CircleCorners">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">58dp</item>
+    </style>
+
     <style name="SmallCircleCorners">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">32dp</item>
     </style>
 
-    <style name="CircleCorners">
+    <style name="TinyCircleCorners">
         <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">58dp</item>
+        <item name="cornerSize">20dp</item>
     </style>
 </resources>
