--- a/app/src/main/res/layout/fragment_advertisements.xml
+++ b/app/src/main/res/layout/fragment_advertisements.xml
@@ -19,13 +19,274 @@
         android:layout_marginTop="48dp"/>
 
     <ViewSwitcher
-        android:layout_width="wrap_content"
+        android:id="@+id/adSwitcher"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:layout_marginHorizontal="22dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvAdsFound">
+
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:shimmer_auto_start="true"
+            app:shimmer_duration="1000">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:baselineAligned="false"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <View
+                            android:layout_width="163dp"
+                            android:layout_height="163dp"
+                            android:background="#E0E0E0" />
+
+                        <View
+                            android:layout_width="163dp"
+                            android:layout_height="20dp"
+                            android:layout_marginTop="5dp"
+                            android:background="#E0E0E0" />
+
+                        <View
+
+                            android:layout_width="163dp"
+                            android:layout_height="15dp"
+                            android:layout_marginTop="5dp"
+                            android:background="#E0E0E0" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <View
+                            android:layout_width="163dp"
+                            android:layout_height="163dp"
+                            android:background="#E0E0E0" />
+
+                        <View
+                            android:layout_width="163dp"
+                            android:layout_height="20dp"
+                            android:layout_marginTop="5dp"
+                            android:background="#E0E0E0" />
+
+                        <View
+                            android:layout_width="163dp"
+                            android:layout_height="15dp"
+                            android:layout_marginTop="5dp"
+                            android:background="#E0E0E0" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:baselineAligned="false"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <View
+                            android:layout_width="163dp"
+                            android:layout_height="163dp"
+                            android:background="#E0E0E0" />
+
+                        <View
+                            android:layout_width="163dp"
+                            android:layout_height="20dp"
+                            android:layout_marginTop="5dp"
+                            android:background="#E0E0E0" />
+
+                        <View
+
+                            android:layout_width="163dp"
+                            android:layout_height="15dp"
+                            android:layout_marginTop="5dp"
+                            android:background="#E0E0E0" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <View
+                            android:layout_width="163dp"
+                            android:layout_height="163dp"
+                            android:background="#E0E0E0" />
+
+                        <View
+                            android:layout_width="163dp"
+                            android:layout_height="20dp"
+                            android:layout_marginTop="5dp"
+                            android:background="#E0E0E0" />
+
+                        <View
+                            android:layout_width="163dp"
+                            android:layout_height="15dp"
+                            android:layout_marginTop="5dp"
+                            android:background="#E0E0E0" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:baselineAligned="false"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <View
+                            android:layout_width="163dp"
+                            android:layout_height="163dp"
+                            android:background="#E0E0E0" />
+
+                        <View
+                            android:layout_width="163dp"
+                            android:layout_height="20dp"
+                            android:layout_marginTop="5dp"
+                            android:background="#E0E0E0" />
+
+                        <View
+
+                            android:layout_width="163dp"
+                            android:layout_height="15dp"
+                            android:layout_marginTop="5dp"
+                            android:background="#E0E0E0" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <View
+                            android:layout_width="163dp"
+                            android:layout_height="163dp"
+                            android:background="#E0E0E0" />
+
+                        <View
+                            android:layout_width="163dp"
+                            android:layout_height="20dp"
+                            android:layout_marginTop="5dp"
+                            android:background="#E0E0E0" />
+
+                        <View
+                            android:layout_width="163dp"
+                            android:layout_height="15dp"
+                            android:layout_marginTop="5dp"
+                            android:background="#E0E0E0" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:baselineAligned="false"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <View
+                            android:layout_width="163dp"
+                            android:layout_height="163dp"
+                            android:background="#E0E0E0" />
+
+                        <View
+                            android:layout_width="163dp"
+                            android:layout_height="20dp"
+                            android:layout_marginTop="5dp"
+                            android:background="#E0E0E0" />
+
+                        <View
+
+                            android:layout_width="163dp"
+                            android:layout_height="15dp"
+                            android:layout_marginTop="5dp"
+                            android:background="#E0E0E0" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <View
+                            android:layout_width="163dp"
+                            android:layout_height="163dp"
+                            android:background="#E0E0E0" />
+
+                        <View
+                            android:layout_width="163dp"
+                            android:layout_height="20dp"
+                            android:layout_marginTop="5dp"
+                            android:background="#E0E0E0" />
+
+                        <View
+                            android:layout_width="163dp"
+                            android:layout_height="15dp"
+                            android:layout_marginTop="5dp"
+                            android:background="#E0E0E0" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </LinearLayout>
+        </com.facebook.shimmer.ShimmerFrameLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvAds"
