--- a/app/src/main/res/layout/fragment_profile_photo.xml
+++ b/app/src/main/res/layout/fragment_profile_photo.xml
@@ -6,12 +6,91 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.ProfilePhotoFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvPosts"
-        android:layout_width="wrap_content"
+    <ViewSwitcher
+        android:id="@+id/photosSwitcher"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:listitem="@layout/post_item"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent">
+
+        <!-- шиммер -->
+
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:shimmer_auto_start="true"
+            app:shimmer_duration="1000">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <View
+                        android:layout_width="133dp"
+                        android:layout_height="230dp"
+                        android:background="#E0E0E0"
+                        android:layout_weight="1"
+                        android:layout_marginEnd="3dp" />
+
+                    <View
+                        android:layout_width="133dp"
+                        android:layout_height="230dp"
+                        android:background="#E0E0E0"
+                        android:layout_weight="1"
+                        android:layout_marginEnd="3dp" />
+
+                    <View
+                        android:layout_width="133dp"
+                        android:layout_height="230dp"
+                        android:background="#E0E0E0"
+                        android:layout_weight="1" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:orientation="horizontal">
+
+                    <View
+                        android:layout_width="133dp"
+                        android:layout_height="230dp"
+                        android:background="#E0E0E0"
+                        android:layout_weight="1"
+                        android:layout_marginEnd="3dp" />
+
+                    <View
+                        android:layout_width="133dp"
+                        android:layout_height="230dp"
+                        android:background="#E0E0E0"
+                        android:layout_weight="1"
+                        android:layout_marginEnd="3dp" />
+
+                    <View
+                        android:layout_width="133dp"
+                        android:layout_height="230dp"
+                        android:background="#E0E0E0"
+                        android:layout_weight="1" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </com.facebook.shimmer.ShimmerFrameLayout>
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvPosts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/post_item" />
+    </ViewSwitcher>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
